--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "Joseph R",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.0.0",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
