--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "start": "node ./build/index.js",
     "build": "tsc -p .",
     "dev": "nodemon ./src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc mocha --require test/setup.ts --watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/antonibrivera/entrack-v2-server.git"
   },
-  "author": "",
+  "author": "Joseph",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/antonibrivera/entrack-v2-server/issues"
@@ -25,8 +25,15 @@
     "@types/node": "^18.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "nodemon": "^2.0.18",
-    "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
+    "nodemon": "^2.0.18",
+    "nyc": "^15.1.0",
+    "ts-node": "^10.8.1"
   }
 }
